Restarted web client

--- a/WebClient/src/app/app.component.html
+++ b/WebClient/src/app/app.component.html
@@ -1,1 +1,20 @@
-<app-course-list></app-course-list>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">EverPlatform</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/"><i class="fas fa-list-ul"></i> List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/create"><i class="fas fa-plus"></i> Create</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<router-outlet></router-outlet>
