Started login on web client

--- a/WebClient/src/app/app.component.html
+++ b/WebClient/src/app/app.component.html
@@ -13,6 +13,12 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/create"><i class="fas fa-plus"></i> Create</a>
         </li>
+        <li>
+          <button class="btn btn-secondary" routerLink="/login">Login</button>
+        </li>
+        <li>
+          <button class="btn btn-secondary">Logout</button>
+        </li>
       </ul>
     </div>
   </div>
